Fix answer button alignment

--- a/frontend-react/src/index.css
+++ b/frontend-react/src/index.css
@@ -27,7 +27,8 @@
 
     .answer-buttons {
       display: grid;
-      grid-template-columns: 50% 50%;
+      grid-template-columns: 1fr 1fr;
+      justify-items: center;
       grid-template-rows: 100px 100px;
     }
 
